# combolister

./: .gitignore  manage.py  notes.txt  pyproject.toml  readme.md
combolister/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
combosearcher/: admin.py  apps.py  models.py  search_controller.py  tasks.py  urls.py  views.py
combosearcher/migrations/: 0001_initial.py  0002_logsfolderpath_searchprogress_searchresult.py
templates/base/: base.html
templates/combosearcher/: found-results.html  search-combos-form.html  search-results-page.html  search-results-page_v2.html  search_progress.html  submit-search.html  upload-combos.html
