[tool.poetry]
name = "combolister"
version = "0.1.0"
description = "Search the combos url:u:p"
authors = ["dividesby0 <fastgamer917@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
requests = "^2.32.3"
mysqlclient = "^2.2.4"
django-import-export = "^4.1.0"
celery = "^5.4.0"
redis = "^5.1.1"
django-admin-autoregister = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
